CSS/main.css
body{
    margin: 0%;
    background-color: rgba(0, 0, 0, 0.411);
    
    background-color: var(--background);
    color: var(--text);
  }

*{
    margin:0;
    padding: 0;
}
nav{
    float:left;
}
.breed{
    height: 150px;
    width: 70%;
    background-color: green;
    margin: 1vh 15%;
    font-display: optional;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    text-align: center;
    font-size: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* code */
#menuToggle
{
  display: block;
  position: fixed;
  top: 50px;
  left: 50px;
  
  z-index: 1;
  
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: #232323;
  
  transition: color 0.3s ease;
}

#menuToggle a:hover
{
  color: tomato;
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  
  cursor: pointer;
  
  opacity: 0; /* hide this */
  z-index: 2; /* and place it over the hamburger */
  
  -webkit-touch-callout: none;
}

/*
 * Just a quick hamburger
 */
#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  
  background: #000000;
  border-radius: 3px;
  
  z-index: 1;
  
  transform-origin: 4px 0px;
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}

/* 
 * Transform all the slices of hamburger
 * into a crossmark.
 */
#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #232323;
}

/*
 * But let's hide the middle one.
 */
#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

/*
 * Ohyeah and the last one should go the other direction
 */
#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}

/*
 * Make this absolute positioned
 * at the top left of the screen
 */
#menu
{
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  
  background: #ededed;
  -webkit-font-smoothing: antialiased;
  /* to stop flickering of text in safari */
  
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li
{
  padding: 10px 0;
  font-size: 22px;
}

/*
 * And let's slide it in from the left
 */
#menuToggle input:checked ~ ul
{
  transform: none;
}
/* code */

.breed2{
    height: 150px;
    width: 70%;
    background-color: green;
    margin: 1vh 15% 0%;
    font-display: optional;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    text-align: center;
    font-size: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.minimised-image{
    width: 450px;
    height: auto;
    margin: 2% 0%;
    border-radius: 5%;
}

.cham-pic-two{
    width: 450px;
    height: auto;
    border-radius: 5%;
}

.pic-holder{
    float: right;
    width: 100px;
    margin-right: 38%;
    margin-top: 3%;
}

.intro{
    background-color: white;
    height: 300px;
    width: 500px;
    margin-top: 4%;
    margin-left: 20%;
    padding: 20px;
    display: flex;
    justify-content: center; /* Horizontal centering */
    text-align: center; /* Centers the text */
    font-size: 18px;
    border-radius: 5%;
}

.imgref{
    height: 300px;
    width: 550px;
    background-color: green;
    margin: 4vh 25%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.left{
    width: 50%;
    float: left;
}

.infobox{
    height: 300px;
    width: 900px;
    background-color: rgb(255, 255, 255);
    margin: 4vh 3%;
    font-size: large;
}

.infoboxcolours{
    height: 300px;
    width: 900px;
    background-color: rgb(255, 255, 255);
    margin: 7vh 26%;
    font-size: large;
    padding: 20px;
}

.insect{
    height: 300px;
    width: 550px;
    margin: 4vh 25%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5%;
}

.emotion{
    height: 100px;
    width: 60%;
    background-color: rgba(72, 107, 15, 0.753);
    margin: 5vh 20%;
    font-display: optional;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    font-size: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cage{
    height: 100px;
    width: 60%;
    background-color: rgba(72, 107, 15, 0.753);
    margin: 5vh 20%;
    font-display: optional;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    font-size: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.back{
    height: 100px;
    width: 20%;
    background-color: rgb(206, 11, 11);
    outline: auto;
    outline-style: dashed;
    outline-color: green;
    outline-width: thick;
    margin: 5vh 40%;
    font-display: optional;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    text-align: center;
    font-size: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}


.colour{
    height: 300;
    width: 500px;
    margin: 4vh 35%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cagetype{
    height: 300px;
    width: 550px;
    margin: 4vh 35%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.gutloading{
    height: 233px;
    width: 350px;
    margin: 4vh 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5%;
}

.habitat{
    height: 300px;
    width: 550px;
    margin: 4vh 25%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.pic{
    height: 250px;
    width: 250px;
    margin: 4vh 55%;
    background-color: brown;
}

.plant{
    height: 250px;
    width: 250px;
    background-color: brown;
}

.name{
    height: 40px;
    width: 330px;
    margin: 4vh 55%;
    background-color: rgb(255, 255, 255);
}

.name2{
    height: 40px;
    width: 330px;
    margin: 4vh 29%;
    background-color: rgb(255, 255, 255);
}

.pic2{
    height: 250px;
    width: 250px;
    margin: 4vh 29%;
    background-color: brown;
}

.firstdivision{
    height: 30px;
    width: 1000px;
    background-color: green;
    margin: 4vh 23.5%;
}

.division{
    height: 30px;
    width: 1000px;
    background-color: green;
    margin: 4vh 19%;
}


.division2{
    height: 30px;
    width: 600px;
    background-color: green;
    margin: 4vh 40%;
}

.behaviourdesc{
    height: 600px;
    width: 80%;
    margin: 2% 10% 4%;
    background-color: white;
}

.behaviourtxt{
    height: 300px;
    width: 65%;
    float: right;
    background-color: white;
}

.behaviourtxt2{
    height: 300px;
    width: 100%;
    float: right;
    background-color: white;
}

.behaviourtxt3{
    height: 300px;
    width: 65%;
    float: left;
    background-color: white;
}

.gif{
    width: 525px;
    height: auto;
}

.leftdiet{
    width: 40%;
    float: left;
}

.rightdiet{
    width: 50%;
    float: left;
}

.lefthabitat{
    width: 40%;
    float: left;
}

.righthabitat{
    width: 50%;
    float: left;
}


.leftcolour{
    width: 40%;
    float: left;
}

.rightcolour{
    width: 50%;
    float: left;
}

a {
    color: black;
    text-decoration: none;
}

a:active {
    color: blue;
}

